Updated html & css files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta name="keywords" content="keywords,here">
   <link rel="stylesheet" href="styles.css" type="text/css">
   </head>
+  <div id="content-container">
+    <h1>First Assignment at CTD</h1>
+    <p>
+      I love to code. Hooray
+    </p>
+  </div>
   <body>
   <div id="target-div"></div>
   <script src="index.js" type="text/javascript"></script>
