--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>title</title>
-  <meta name="author" content="name">
-  <meta name="description" content="description here">
-  <meta name="keywords" content="keywords,here">
-  <link rel="stylesheet" href="styles.css" type="text/css">
-  </head>
-  <div id="content-container">
-    <h1>First Assignment at CTD</h1>
-    <p>
-      I love to code. Hooray
-    </p>
-  </div>
-  <body>
-  <div id="target-div"></div>
-  <script src="index.js" type="text/javascript"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <title>Sunrise</title>
+        <meta name="author" content="name">
+        <meta name="description" content="description here">
+        <meta name="keywords" content="keywords,here">
+        <link rel="icon" type="image/ico" sizes="16x16" href="contrast.ico">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css" type="text/css">
+    </head>
+    <body>
+        <div id="content-container">
+            <h1>First Assignment at CTD</h1>
+            <p>
+            <span class="first-row">Hello everybody :)</span>
+            I'm very excited to start this journey with you.
+            I love coding and love to be in environment where people
+            trying to give their best in order to achieve great things.
+            Hope we gonna learn bunch of great stuff and become excellent developer in a near future
+            </p>
+          </div>
+    <!-- <div id="target-div"></div> -->
+    <!-- <script src="index.js" type="text/javascript"></script> -->
+    </body>
 </html>
